I fix issues with app crashes while playing ExoPlayer with state change, and also fix all other compliance issues.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="recipe_image">Recipe Image</string>
     <string name="ingredients_tag">Ingredients:</string>
     <string name="no_video_to_paly">No Video for this Step!</string>
+    <string name="playing_paused">playPause</string>
 
 </resources>
